--- a/static/css/interface/_options.scss
+++ b/static/css/interface/_options.scss
@@ -1,8 +1,4 @@
 .options {
+    border: 1px solid #ccc;
     background-color: #eee;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 0;
 }
