--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -1,4 +1,5 @@
 @import 'interface/viewport';
 @import 'interface/canvas';
+@import 'interface/menu';
 @import 'interface/timeline';
 @import 'interface/options';
