Set up menu plugin for options and the timeline

--- a/static/css/bundle.css
+++ b/static/css/bundle.css
@@ -12,6 +12,7 @@
   background-color: #fff; }
 
 .menu .title {
+  background-color: #ccc;
   font-weight: bold; }
 
 .menu-template {
@@ -19,11 +20,8 @@
 
 .timeline {
   background-color: #eee;
-  position: absolute;
   min-width: 400px;
-  min-height: 200px;
-  bottom: 0;
-  right: 0; }
+  min-height: 200px; }
 
 .options {
   border: 1px solid #ccc;
