--- a/static/css/interface/_menu.scss
+++ b/static/css/interface/_menu.scss
@@ -1,6 +1,33 @@
 .menu {
+    position: relative;
+
     .title {
         background-color: #ccc;
         font-weight: bold;
     }
+
+    .button {
+        border: 1px solid #fff;
+        position: absolute;
+        cursor: pointer;
+
+        &:hover {
+            background-color: #fff;
+        }
+    }
+
+    .minimize {
+        top: 0;
+        right: 15px;
+    }
+
+    .close {
+        top: 0;
+        right: 2px;
+    }
+}
+
+.tray {
+    position: fixed;
+    bottom: 0;
 }
