--- a/static/css/interface/_menu.scss
+++ b/static/css/interface/_menu.scss
@@ -30,4 +30,12 @@
 .tray {
     position: fixed;
     bottom: 0;
+
+    .minimized {
+        display: inline-block;
+        padding: 4px 8px;
+        margin-right: 4px;
+        background-color: #ccc;
+        border: 3px solid #eee;
+    }
 }
