--- a/static/css/interface/_timeline.scss
+++ b/static/css/interface/_timeline.scss
@@ -1,9 +1,10 @@
 .timeline {
     background-color: #eee;
-    width: 400px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
+    min-width: 400px;
+    min-height: 100px;
     position: relative;
-    padding-bottom: 2.5em;
 
     .buttons {
         position: absolute;
