Added minimum sizes when resizing menus

--- a/static/css/interface/_menu.scss
+++ b/static/css/interface/_menu.scss
@@ -27,6 +27,10 @@
         }
     }
 
+    .content {
+        overflow: hidden;
+    }
+
     .resize {
         position: absolute;
         width: 1em;
