Created toolbar menu, added new timeline button

--- a/static/css/interface/_menu.scss
+++ b/static/css/interface/_menu.scss
@@ -6,6 +6,10 @@
         background-color: #ccc;
         font-weight: bold;
 
+        .text {
+            pointer-events: none;
+        }
+
         .button {
             border: 1px solid #fff;
             position: absolute;
