--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -3,5 +3,6 @@
 @import 'interface/viewport';
 @import 'interface/canvas';
 @import 'interface/menu';
+@import 'interface/toolbar';
 @import 'interface/timeline';
 @import 'interface/options';
