--- a/static/css/interface/_timeline.scss
+++ b/static/css/interface/_timeline.scss
@@ -29,8 +29,14 @@
         position: relative;    
     }
 
+    .icons {
+        position: absolute;
+        top: 0.3em;
+        left: 0;
+    }
+
     .layer {
-        height: 50px;
+        height: 4em;
         background-color: #fff;
         border: 1px solid #ccc;
         margin-left: 1em;
