--- a/static/css/interface/_timeline.scss
+++ b/static/css/interface/_timeline.scss
@@ -26,7 +26,7 @@
     }
 
     .layer-wrap {
-        position: relative;    
+        position: relative;
     }
 
     .icons {
@@ -40,5 +40,16 @@
         background-color: #fff;
         border: 1px solid #ccc;
         margin-left: 1em;
+
+        &.inactive {
+            .cover {
+                position: absolute;
+                top: 0;
+                left: 1em;
+                bottom: 0;
+                right: 0;
+                background-color: rgba(200, 200, 200, 0.5);
+            }
+        }
     }
 }
