Replaced custom resize code with new version of dragondrop

--- a/static/css/interface/_timeline.scss
+++ b/static/css/interface/_timeline.scss
@@ -33,6 +33,10 @@
         position: absolute;
         top: 0.3em;
         left: 0;
+
+        div {
+            cursor: pointer;
+        }
     }
 
     .layer {
