--- a/static/css/interface/_canvas.scss
+++ b/static/css/interface/_canvas.scss
@@ -3,3 +3,11 @@
     border: 3px solid #ccc;
     background-color: #fff;
 }
+
+.canvas .layer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
